--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <title>Profile for {{ displayname }} | Tiramisu</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <link href="{{ url_for('static', filename='base.scss') }}" rel="stylesheet" type="text/css">
-    <link href="{{ url_for('static', filename='splide.css') }}" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/css/splide.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@latest/dist/js/splide.min.js"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='datatables.css') }}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
