--- a/static/base.scss
+++ b/static/base.scss
@@ -50,7 +50,8 @@ th{text-align:left}
 //  YMbmd'   `Ybmd9'.JMML.`Ybmd9'.JMML.   M9mmmP' 
 
 // Minecraft color code colors
-.black { color: #000 }
+.black { color: black }
+.blank {color: #010101}
 .dark_blue { color: #00a }
 .dark_green { color: #0a0 }
 .dark_aqua, .cyan { color: #0aa }
